--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="app">
     <h1>To-Do List</h1>
     <input id="todo-input" type="text" placeholder="Add a new task..." />
-    <button id="add-btn">Add</button>
+    <button id="add-bt">Add</button>
     <ul id="todo-list"></ul>
   </div>
 
